--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-accelerate==0.21.0
-peft==0.4.0
-bitsandbytes==0.40.2
-transformers==4.31.0
+llama_index==latest
+google-generativeai==latest
+pypdf==latest
+sentence-transformers==latest
+transformers==4.38.2
+bitsandbytes==latest
+accelerate==latest
+loralib==latest
+peft==0.9.0
+datasets==latest
 trl==0.4.7
 guardrail-ml==0.0.12
-tensorboard
+tensorboard==latest
 unstructured[local-inference]==0.7.4
-pillow
+pillow==latest
